feat(NM-46): added conversation management and chat widget

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,7 @@
 @import '~/assets/scss/tailwindcss/all.scss';
 
 *{
-  font-family: Google;
+  font-family: 'Montserrat', sans-serif;
   /* width */
   ::-webkit-scrollbar {
     width: 6px;
