--- a/pages/internal/customers/style.scss
+++ b/pages/internal/customers/style.scss
@@ -54,15 +54,10 @@
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 4px 0px;
 }
 .messenger-chatbox {
-  height: 71vh;
+  height: 78vh;
   padding-left: 15px;
   padding-right: 15px;
   overflow: auto;
-}
-.messenger-reply-box {
-  display: flex;
-  min-height: 7vh;
-  padding: 8px 16px;
 }
 .is-customer-chat {
   margin-bottom: 1rem;
@@ -104,6 +99,24 @@
 .is-special-action {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
+}
+.card-loading-spinner {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 2005;
+  background-color: #fff;
+  opacity: 0.8;
+  .loading-spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+    color: var(--color-theme-1);
+  }
 }
 @media (max-width: 1280px) {
   .expand-full-chat {
