--- a/pages/internal/customers/style.scss
+++ b/pages/internal/customers/style.scss
@@ -24,7 +24,7 @@
         margin-left: 20px;
         white-space: nowrap;
       }
-      .customer-name {
+      .customer-email {
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
@@ -126,4 +126,9 @@
 .empty-view {
   width: 100%;
   height: 78vh;
+}
+.status-information {
+  padding: 12px 16px;
+  background-color:  #adb5bd;
+  color: #fff;
 }
